--- a/node/public/gakf/addSick.html
+++ b/node/public/gakf/addSick.html
@@ -122,7 +122,7 @@
 		  		<span style="color:#fff;" ms-click="save">保存</span>
 		  	</div>
 		  	<div class="col-xs-6">
-		  		<span style="color:#fff;" ms-click="print">打印床头卡</span>
+		  		<span style="color:#fff;" ms-click="print">查房</span>
 		  	</div>
 		  </div>
 		</nav>
