--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -3,22 +3,42 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0 user-scalable=yes"/>
-	<title>病人详情</title>
+	<title>住院信息</title>
 	<link rel="stylesheet" type="text/css" href="./static/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+
 	<script type="text/javascript" src="./static/js/require.js"></script>
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
+	<link rel="stylesheet" type="text/css" href="./static/css/index.css">
+	<style type="text/css">
+	.my-media img{
+		width: 70px;
+		height: 70px;
+	}
+	.my-media .content{
+		padding-left: 80px;
+	}
+	</style>
 </head>
 <body ms-controller="test">
-
-	<div class="container">
-		<ul class="list-group">
-		  <li class="list-group-item">
-		  	<span>主治医生</span>
-		  	<span class="right">{{d.doctor_name}}</span>
-		  </li>
-		</ul>
+	<div class="">
+		<div class="panel">
+			<div class="panel-body my-media">
+				<div class="left">
+					<img class="media-object" src="./static/images/doc.jpg" alt="...">
+				</div>
+				<div class="right">
+					<div class="spacer15"></div>
+					<span class=" glyphicon glyphicon-chevron-right gray_arrow"></span>
+				</div>
+				<div class="content">
+					<div class="spacer15"></div>
+					主治医生：<span class="orange">{{d.doctor_name}}</span> 
+					<div class="spacer5"></div>
+					{{d.title}}
+				</div>
+			</div>
+		</div>
 		<div class="spacer10"></div>
 		<ul class="list-group">
 		  <li class="list-group-item gray">
@@ -54,7 +74,7 @@
 			<span class="right">{{d.out_day | date("yyyy年MM月dd日")}}</span>
 		  </li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">安全用药</span>
+		<span style="padding:5px 15px;display: inline-block;">安全用药</span>
 		<ul class="list-group">
 			<li class="list-group-item">
 		  		<a href="">
@@ -71,7 +91,7 @@
 		  		</a>
 		 	</li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">医学量表</span>
+		<span style="padding:5px 15px;display: inline-block;">医学量表</span>
 		<ul class="list-group">
 			<li class="list-group-item">
 		  		<a href="">
@@ -88,7 +108,7 @@
 		  		</a>
 		 	</li>
 		</ul>
-		<span style="padding:5px 0px;display: inline-block;">长期登记量表</span>
+		<span style="padding:5px 15px;display: inline-block;">长期登记量表</span>
 
 		<ul class="list-group">
 			<li class="list-group-item">
@@ -106,27 +126,13 @@
 		  		</a>
 		 	</li>
 		</ul>
+		
 	</div>
-	<nav class="navbar navbar-default navbar-fixed-bottom my-nav my-nav-bottom" ms-visible="d.isvisible">
-	  <div class="container text-center" style="height: 42px; line-height: 42px;">
-	    <div class="row">
-	    	<div class="col-xs-12">
-	    		<a ms-href="/gakf/check.html?sick_id={{d.id}}&doctor_id={{d.doctor_id}}">
-			    	<span style="color:#fff;" >查房</span>
-			    </a>
-	    	</div>
-	    </div>
-	  </div>
-	</nav>
+	
 	<script type="text/javascript">
-		require(["store","avalon"],function(store){
-				var data={isvisible:false},temp=store.get("user"),id;
-				if(temp.type=="sick"){
-					id = temp.id;
-				}else if(temp.type == "doctor"){
-					id = RC.parseOptions(window.location.href).id;
-					data.isvisible = true;
-				}
+
+	require(["store","upload","avalon"],function(store){
+		var data={},id=store.get("user").id;
 				
 			    var vmodel = avalon.define({
 			          $id: "test",
@@ -138,14 +144,15 @@
 					url: "/sick/info?id="+id,
 					dataType: "json", 
 					success: function(obj){
-						vmodel.d = $.extend(data,obj.content);
+						vmodel.d = obj.content;
 		    		},
 		    		error:function(){
 
 		    		}
 			}); 
-		});
-		
+
+
+	});
 	</script>
 </body>
 </html>
