--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -74,14 +74,14 @@
 		<span style="padding:5px 0px;display: inline-block;">医学量表</span>
 		<ul class="list-group">
 			<li class="list-group-item">
-		  		<a href="">
+		  		<a href="/gakf/caprini.html">
   			  		<span>Caprini 量表</span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8">高危</span>
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
-		  		<a href="">
+		  		<a href="/gakf/hss.html">
   			  		<span>膝关节HSS评分 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8">点击请填写</span>
