--- a/node/public/gakf/caprini.html
+++ b/node/public/gakf/caprini.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="./static/js/require.js"></script>
 	<script type="text/javascript" src="./static/js/main.js"></script>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="" id="gradeList">
 		<span style="margin: 10px;display: inline-block;">{{d.summary}}</span>
 		<div  ms-repeat-el="d.items"  ms-attr-alt="{{$index}}">
