--- a/node/public/gakf/hss.html
+++ b/node/public/gakf/hss.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="./static/js/require.js"></script>
 	<script type="text/javascript" src="./static/js/main.js"></script>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="" id="gradeList">
 		<nav class="navbar navbar-default navbar-fixed-top my-nav my-nav-top">
 		  <div id="my-tab">
