--- a/node/public/gakf/question.html
+++ b/node/public/gakf/question.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="">
 		<div class="panel panel-default my-panel" style="margin: 0px;">
 		  <div class="panel-body">
