--- a/node/public/gakf/addFlow.html
+++ b/node/public/gakf/addFlow.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="container">
 		<div class="row">
 			<form action="/doctor/out_check" method="post" id="askFrom">
