--- a/node/public/gakf/inpatientSick.html
+++ b/node/public/gakf/inpatientSick.html
@@ -20,7 +20,7 @@
 	}
 	</style>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="">
 		<div class="panel">
 			<div class="panel-body my-media">
