--- a/node/public/gakf/sick.html
+++ b/node/public/gakf/sick.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body ms-controller="test">
+<body ms-controller="test" class="ms-controller">
 	<div class="container">
 		<a ms-href="sickDetail.html?id={{el.id}}" style="display: block;" ms-repeat-el="d">
 			<div class="panel panel-default my-panel" style="margin-top: 10px;">
