--- a/node/public/gakf/login.html
+++ b/node/public/gakf/login.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript" src="./static/js/require.js"></script>
 	<script type="text/javascript" src="./static/js/main.js"></script>
 </head>
-<body ms-controller="test" class="ms-controller">
+<body ms-controller="test" >
 	<div class="container">
 		<div class="page-header text-center ">
 			<div class="spacer15"></div>
