--- a/node/public/gakf/sickFlow.html
+++ b/node/public/gakf/sickFlow.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="./static/js/main.js"></script>
 	<script type="text/javascript" src="./static/js/resource.js"></script>
 </head>
-<body ms-controller="test" class="ms-controller">
+<body ms-controller="test">
 	<div class="container"  id="questionCon">
 		
 
