--- a/node/public/gakf/sickDetail.html
+++ b/node/public/gakf/sickDetail.html
@@ -82,7 +82,7 @@
 		  		</a>
 		 	</li>
 		 	<li class="list-group-item">
-		  		<a ms-href="/gakf/hss.html?sick_id={{d.sickId}}">
+		  		<a ms-href="/gakf/hss_left.html?sick_id={{d.sickId}}">
   			  		<span>膝关节HSS评分 </span>
   					<span class="right glyphicon glyphicon-chevron-right gray_arrow"></span>
   					<span class="right orange sl8" ms-if="d.hss!=''">{{d.hss}}</span>
